--- a/html/under_construction.html
+++ b/html/under_construction.html
@@ -3,9 +3,13 @@
 <style>
 
     html, body{
+        height: 100%;
         left: 0;
         padding: 0;
         margin-left: 0;
+        margin-top: 0;
+        /* background-color: red; */
+        background-color: rgba(211, 205, 205, 0.945);
     }
 
 
@@ -27,6 +31,7 @@
         mix-blend-mode: darken;
         border-radius: 50%;
         box-shadow: 10px 10px 20px grey;
+        height: 25%;
     }
 
     .bottomcenter{
@@ -52,7 +57,8 @@
         text-decoration: underline;
     }
     .vl{
-        border-left: 3px solid red;
+        /* border-left: 3px solid yellow; */
+        border-left: 3px solid darkorange;
         height: 30px;
         display: inline;
         margin-left: 10px;
@@ -67,9 +73,9 @@
     </div>
 
     <div class="bottomcenter">
-        <a href="../php/header.php">Go Back</a>
+        <a href="../html/header.html">Go Back</a>
         <div class="vl"></div>
-        <a href="../php/header.php" style="margin-left:10px;">Home Page</p>
+        <a href="../html/header.html" style="margin-left:10px;">Home Page</p>
     </div>
 
 </body>
